--- a/presentation-layer/package.json
+++ b/presentation-layer/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-tsparticles": "^2.3.3",
     "sweetalert2": "^11.6.14",
     "tsparticles": "^2.3.4",
