--- a/presentation-layer/package.json
+++ b/presentation-layer/package.json
@@ -11,8 +11,9 @@
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.3.3",
-    "sweetalert2": "^11.6.14",
+    "sweetalert": "^2.1.2",
     "tsparticles": "^2.3.4",
     "tsparticles-slim": "^2.3.4",
     "web-vitals": "^2.1.4"
