--- a/presentation-layer/package.json
+++ b/presentation-layer/package.json
@@ -7,15 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
-    "react-tsparticles": "^2.3.3",
     "sweetalert": "^2.1.2",
-    "tsparticles": "^2.3.4",
-    "tsparticles-slim": "^2.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
