--- a/presentation-layer/public/manifest.json
+++ b/presentation-layer/public/manifest.json
@@ -1,22 +1,13 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Guess Ninja",
+  "name": "Guess Ninja",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "ninja-gaming-logo-icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/png"
     }
+    
   ],
   "start_url": ".",
   "display": "standalone",
